// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercises Integration Snapshots NounTranslation 1`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 Portuguese: a cidade                   Answers History:              
 English: city                                                        
 Wrong! [voice]                         1. ci                         
                                                                      
 Repeat: city                                                         
 Press key to continue...                                             
 r - repeat the answer                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots NounTranslation 2`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWW                   WWWWWWWWWWWWWWWW              
 WWWWWWWWWGGRR                                                        
 WWWWWWWWWWWWWW                         WWWGG                         
                                                                      
 WWWWWWWWGGGG                                                         
 WWWWWWWWWWWWWWWWWWWWWWWW                                             
 WWWWWWWWWWWWWWWWWWWWW                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots NounTranslation 3`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 English: city cidade                   Answers History:              
 Portuguese: a cidade                                                 
 Wrong! [voice]                         1. a cida                     
                                                                      
 Repeat: a cidade                                                     
 Press key to continue...                                             
 r - repeat the answer                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots NounTranslation 4`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWW                   WWWWWWWWWWWWWWWW              
 WWWWWWWWWWWWGGGGGGRR                                                 
 WWWWWWWWWWWWWW                         WWWGGGGGG                     
                                                                      
 WWWWWWWWGGGGGGGG                                                     
 WWWWWWWWWWWWWWWWWWWWWWWW                                             
 WWWWWWWWWWWWWWWWWWWWW                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots NounTranslation 5`] = `
[
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED Portuguese: a cidade",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED i",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED i",
  "KEY_PRESSED t",
  "KEY_PRESSED y",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED English: city",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED a",
  "KEY_PRESSED",
  "KEY_PRESSED c",
  "KEY_PRESSED i",
  "KEY_PRESSED d",
  "KEY_PRESSED a",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED a",
  "KEY_PRESSED",
  "KEY_PRESSED c",
  "KEY_PRESSED i",
  "KEY_PRESSED d",
  "KEY_PRESSED a",
  "KEY_PRESSED d",
  "KEY_PRESSED e",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Exercises Integration Snapshots SentenceTranslation 1`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 Portuguese: Como estás?                Answers History:              
 English: How are you?                                                
 Wrong! [voice]                         1. How are yo                 
                                                                      
 Repeat: How are you?                                                 
 Press key to continue...                                             
 r - repeat the answer                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots SentenceTranslation 2`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWWWWW                WWWWWWWWWWWWWWWW              
 WWWWWWWWWGGGGGGGGGGRR                                                
 WWWWWWWWWWWWWW                         WWWGGGGGGGGGG                 
                                                                      
 WWWWWWWWGGGGGGGGGGGG                                                 
 WWWWWWWWWWWWWWWWWWWWWWWW                                             
 WWWWWWWWWWWWWWWWWWWWW                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots SentenceTranslation 3`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 English: How are you?s?                Answers History:              
 Portuguese: Como estás?                                              
 Wrong! [voice]                         1. Como estáo                 
                                                                      
 Repeat: Como estás??                                                 
 Press key to continue...                                             
 r - repeat the answer                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots SentenceTranslation 4`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWWWWW                WWWWWWWWWWWWWWWW              
 WWWWWWWWWWWWGGGGGGGGGRR                                              
 WWWWWWWWWWWWWW                         WWWGGGGGGGGGG                 
                                                                      
 WWWWWWWWGGGGGGGGGGGG                                                 
 WWWWWWWWWWWWWWWWWWWWWWWW                                             
 WWWWWWWWWWWWWWWWWWWWW                                                
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots SentenceTranslation 5`] = `
[
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED Portuguese: Como estás?",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED H",
  "KEY_PRESSED o",
  "KEY_PRESSED w",
  "KEY_PRESSED",
  "KEY_PRESSED a",
  "KEY_PRESSED r",
  "KEY_PRESSED e",
  "KEY_PRESSED",
  "KEY_PRESSED y",
  "KEY_PRESSED o",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED H",
  "KEY_PRESSED o",
  "KEY_PRESSED w",
  "KEY_PRESSED",
  "KEY_PRESSED a",
  "KEY_PRESSED r",
  "KEY_PRESSED e",
  "KEY_PRESSED",
  "KEY_PRESSED y",
  "KEY_PRESSED o",
  "KEY_PRESSED u",
  "KEY_PRESSED ?",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED English: How are you?",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED C",
  "KEY_PRESSED o",
  "KEY_PRESSED m",
  "KEY_PRESSED o",
  "KEY_PRESSED",
  "KEY_PRESSED e",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED á",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED C",
  "KEY_PRESSED o",
  "KEY_PRESSED m",
  "KEY_PRESSED o",
  "KEY_PRESSED",
  "KEY_PRESSED e",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED á",
  "KEY_PRESSED s",
  "KEY_PRESSED ?",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Exercises Integration Snapshots VerbExercise 1`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 Infinitive: to build                   Answers History:    Cojugations:
 [Past Perfect] Tu: construíste                             Infinitive: [construir]
 Wrong! [voice]                         1. construís        Eu:   construo   |construí
                                                            Tu:   constróis  |construíste
 Repeat: construíste                                        Ela:  constrói   |construiu
 Press key to continue...                                   Nós:  construímos|construímos
 r - repeat the answer                                      Eles: constroem  |construíram
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots VerbExercise 2`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWW                   WWWWWWWWWWWWWWWW    WWWWWWWWWWWW
 WWWWWWWWWWWWWWWWWWWGGGGGGGGGRR                             WWWWWWWWWWWWWWWWWWWWWWW
 WWWWWWWWWWWWWW                         WWWGGGGGGGGG        WWWWWWWWWWWWWWWWWWYYYYYYYY
                                                            WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
 WWWWWWWWGGGGGGGGGGG                                        WWWWWYYYYYYYYYYYYWWWWWWWWWW
 WWWWWWWWWWWWWWWWWWWWWWWW                                   WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
 WWWWWWWWWWWWWWWWWWWWW                                      WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots VerbExercise 3`] = `
"IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
 Infinitive: to build                   Answers History:    Cojugations:
 [Present Simple] Tu: constróis                             Infinitive: [construir]
 Wrong! [voice]                         1. constróís        Eu:   construo   |construí
                                                            Tu:   constróis  |construíste
 Repeat: constróiste                                        Ela:  constrói   |construiu
 Press key to continue...                                   Nós:  construímos|construímos
 r - repeat the answer                                      Eles: constroem  |construíram
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
Last Time Attempted:  2022-7-19 12:36 [in 0 seconds]                  
                                                                      
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
IMAGE                                                                     
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots VerbExercise 4`] = `
"                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
 WWWWWWWWWWWWWWWWWWWW                   WWWWWWWWWWWWWWWW    WWWWWWWWWWWW
 WWWWWWWWWWWWWWWWWWWWWGGGGGGGRR                             WWWWWWWWWWWWWWWWWWWWWWW
 WWWWWWWWWWWWWW                         WWWGGGGGGGGG        WWWWWWWWWWWWWWWWWWYYYYYYYY
                                                            WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
 WWWWWWWWGGGGGGGGGGG                                        WWWWWYYYYYYYYYYYYWWWWWWWWWW
 WWWWWWWWWWWWWWWWWWWWWWWW                                   WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
 WWWWWWWWWWWWWWWWWWWWW                                      WWWWWYYYYYYYYYYYYWYYYYYYYYYYY
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                  
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      "
`;

exports[`Exercises Integration Snapshots VerbExercise 5`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED Infinitive: to build",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED o",
  "KEY_PRESSED n",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED r",
  "KEY_PRESSED u",
  "KEY_PRESSED í",
  "KEY_PRESSED s",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED o",
  "KEY_PRESSED n",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED r",
  "KEY_PRESSED u",
  "KEY_PRESSED í",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED e",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED Infinitive: to build",
  "EXERCISE_BODY_PRINTED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED o",
  "KEY_PRESSED n",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED r",
  "KEY_PRESSED ó",
  "ANSWER_SUBMITTED voice",
  "ANSWER_CHECKED [object Object]",
  "KEY_PRESSED c",
  "KEY_PRESSED o",
  "KEY_PRESSED n",
  "KEY_PRESSED s",
  "KEY_PRESSED t",
  "KEY_PRESSED r",
  "KEY_PRESSED ó",
  "KEY_PRESSED i",
  "KEY_PRESSED s",
  "ANSWER_SUBMITTED voice",
  "KEY_PRESSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;
